added tests, updated readme